// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper should render properly 1`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "initVal": 1,
      "onChange": [MockFunction],
    },
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`Stepper should render show num 1`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "initVal": 1,
      "showNum": true,
    },
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`Stepper should render show num 2`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "initVal": 1,
      "step": 3,
    },
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`Stepper should render show num 3`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "disabled": true,
      "initVal": 1,
      "step": 3,
    },
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`Stepper should render show num 4`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "initVal": 1,
      "integerOnly": true,
      "min": -Infinity,
    },
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`Stepper should render show num 5`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "initVal": 1,
      "readOnly": true,
    },
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;
